# -xo_back

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build_image.yml  pythonapp.yml
api/: actions.py  app.py
api/aioclub/: README.md  action.py  event_bus.py  exceptions.py  room.py
api/aioclub/bots/: __init__.py  base_bot.py  starlette_websocket_bot.py
api/controllers/: __init__.py  board.py  chat.py  game.py  game_controller.py  user.py
api/modules/: main.py  socket.py  state.py  storage.py
api/routers/: __init__.py  chat.py  game.py  game_router.py  mock_router.py
api/server/: action.py  connection.py  pipe.py  process.py  schema.py  server.py
api/utils/: http.py
docker/: docker-compose.yaml
docker/xo/: Dockerfile
examples/: async_io_primitive.py  chat.py  client.py
models/: point.py
play_node/: main.py  setting.py
play_node/services/: game_daemon.py
tests/: conftest.py  test_ping.py
tests/aioclub/: conftest.py  test_bus.py  test_room.py
tests/controllers/: test_game.py
tests/routers/: test_chat.py
