[tool.poetry]
name = "xo_back"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.49.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
ipython = "^7.12.0"
pytest-asyncio = "^0.11.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
